[project]
name = "uberpy"
version = "0.22.0"
description = "Simple Uber Direct API Wrapper"
authors = [
    { name = "Isaac Sánchez", email = "isaac@elrincondelsanchez.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "phonenumberslite>=9.0.13",
    "pydantic[email]>=2.11.7",
    "pydantic-extra-types>=2.10.5",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--import-mode=importlib",
]
pythonpath = [
  "."
]
